--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -28,7 +28,7 @@
     <string name="cancel">Annulla</string>
     <string name="set_time">Questo tweet verrà mandato il</string>
     <string name="random_menu">Manda un tweet a caso</string>
-    <string name="welcome">Benvenuto</string>
+    <string name="welcome">…benvenuto</string>
     <string name="logout_title_dialog">Vuoi davvero fare il logout da Twitter?</string>
     <string name="delete_programmed_tweets">Eliminare tutti i tweet programmati?</string>
 
@@ -61,5 +61,8 @@
 
     <string name="preference_notifications_title">Notifiche</string>
     <string name="preference_notification_summary">Abilita Notifiche</string>
+
+    <string name="pref_bug_report">Segnala un Bug</string>
+    <string name="login_button_text">Accedi con Twitter</string>
 
 </resources>
