--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,10 +48,9 @@
     <string name="redirect_wikipedia" translatable="false">Wikipedia</string>
     <string name="random_menu">Send a random tweet</string>
     <string name="pay_with_a_tweet" translatable="false">Pay with a Tweet</string>
-    <string name="welcome">Welcome</string>
+    <string name="welcome">…welcome</string>
     <string name="logout_title_dialog">Do you really want to disconnect of Twitter?</string>
     <string name="yes">Yes</string>
-    <string name="login_button" translatable="false">Login Button</string>
     <string name="change_contentdescription" translatable="false">Next Tweet Button</string>
     <string name="send_contentdescription" translatable="false">Send This Tweet Button</string>
     <string name="promo_message" translatable="false">Thanks for joining our army, help us recruit new troops</string>
@@ -100,7 +99,9 @@
     <string name="preference_fragment_compat_link" translatable="false">github.com/liudongmiao/preference-fragment-compat</string>
     <string name="remove_tweet_cnt_description">Remove Tweet Button</string>
     <string name="title_activity_login" translatable="false">Login</string>
-    <string name="title_activity_time_picker">Program Tweet</string>
-    <string name="timePickerActivityTitle">Program Tweet</string>
+    <string name="pref_bug_report">Report a Bug</string>
+    <string name="login_button_text">Sign in with Twitter</string>
+    <string name="tweetMaiusc" translatable="false">TWITTER</string>
+    <string name="quotesMaiusc" translatable="false">QUOTES</string>
 
 </resources>
