--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -14,8 +14,8 @@
         <item>Politici</item>
         <item>Filosofi</item>
         <item>Altri</item>
-        <item>Divertenti</item>
         <item>Supereroi</item>
+        <item>Divertenti</item>
     </string-array>
     
     <array name="send_tweet_without_ask">
@@ -26,7 +26,6 @@
     <string name="done">Salva</string>
     <string name="send_now">Twitta ora</string>
     <string name="cancel">Annulla</string>
-    <string name="set_time">Questo tweet verrà mandato il</string>
     <string name="random_menu">Manda un tweet a caso</string>
     <string name="welcome">…benvenuto</string>
     <string name="logout_title_dialog">Vuoi davvero fare il logout da Twitter?</string>
@@ -64,5 +63,8 @@
 
     <string name="pref_bug_report">Segnala un Bug</string>
     <string name="login_button_text">Accedi con Twitter</string>
+
+    <string name="time">Ora</string>
+    <string name="date">Data</string>
 
 </resources>
